chore: add package-lock.json for CI/CD reproducibility

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Dependencies
 node_modules/
-package-lock.json
+# package-lock.json - Keep this file for CI/CD reproducibility
 
 # Build outputs
 dist/
